In JAVASCRIPT Folder/Projects/E-Commerce Web Application, created another page inside pages folder named "allProducts.html" where i implemented search box and which displays all products. for this i have created search-box css and js file and lastly the common css code like boiler plate and footer small style are migrated from index.css to common_style.css which will be common to all pages. At lastly i have some bug in search box like menuOptions are appeared behind the cards and the range number input tag has no border at left side.. will improve this later

--- a/JAVASCRIPT/Projects/E-Commerce Web Application/styles/index.css
+++ b/JAVASCRIPT/Projects/E-Commerce Web Application/styles/index.css
@@ -1,27 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html,
-body {
-  width: 100%;
-  /* background-color: black; */
-  /* color: aliceblue; */
-  font-family: 'Arial Narrow Bold', sans-serif;
-}
-
-:root {
-  --inline-padding-value: 4rem;
-}
-
-main {
-  width: 100%;
-  scroll-behavior: smooth;
-  background-color: white;
-}
-
+/* CSS for index.html */
 .banner {
   background-color: aliceblue;
   background: url(https://plus.unsplash.com/premium_photo-1681398745480-151fc6addaaf?q=80&w=2660&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
@@ -81,18 +58,6 @@ main {
   justify-content: space-between;
   gap: 1rem;
   flex-wrap: wrap;
-}
-
-footer {
-  width: 100%;
-  height: 300px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  color: whitesmoke;
-  background-color: #18181A;
-  font-size: 1.3em;
 }
 
 /* Responsive design styles */
